# Diaricat

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
docs/: arquitectura-v1.md  lovable-integration.md  openapi-v1.md
frontend/: .env.example  README.md  dev-server.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/components/: FloatingBrand.tsx  FloatingNav.tsx  LanguageToggle.tsx  TopBar.test.tsx  TopBar.tsx
frontend/src/context/: AppContext.tsx  I18nContext.tsx
frontend/src/lib/: api.ts  i18n.ts
frontend/src/pages/: Index.startup.test.tsx  Index.tsx
frontend/src/types/: backend.ts
packaging/: diaricat.spec
packaging/runtime_hooks/: pyi_rth_speechbrain_compat.py  pyi_rth_torch_dll.py
scripts/: build_windows.ps1  collect_debug_bundle.ps1  recover_runtime_space.ps1  smoke_test_packaged.ps1  start_diarcat.ps1
src/diaricat/: __main__.py  bootstrap.py  desktop.py  errors.py  main.py  settings.py
src/diaricat/api/: app.py
tests/: conftest.py
tests/integration/: test_api_contract.py  test_orchestrator_with_fakes.py
tests/unit/: test_alignment_service.py  test_audio_service.py  test_cli_smoke.py  test_desktop_profile.py  test_desktop_window_chrome.py  test_device.py  test_diarization_service.py  test_job_manager.py  test_models.py  test_postprocess_guardrails.py  test_settings.py  test_setup_service.py  test_speechbrain_compat.py  test_torchaudio_compat.py  test_transcription_service.py  test_validation.py
(+29 files in other folders)
