[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "diaricat"
version = "1.0.0"
description = "Local and private intelligent transcription pipeline for Windows desktop."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Diaricat Team" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "PyYAML>=6.0.1,<7.0.0",
  "typer>=0.12.3,<1.0.0",
  "rich>=13.7.1,<14.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "reportlab>=4.2.2,<5.0.0",
  "pywebview>=5.3.2,<6.0.0",
  "requests>=2.32.0,<3.0.0",
  "huggingface_hub>=0.24.0,<2.0.0",
  "speechbrain>=1.0.0,<2.0.0"
]

[project.optional-dependencies]
cpu = [
  "faster-whisper>=1.0.3",
  "pyannote.audio>=3.3.2",
  "llama-cpp-python>=0.2.90",
  "torch>=2.3.0"
]
gpu = [
  "faster-whisper>=1.0.3",
  "pyannote.audio>=3.3.2",
  "llama-cpp-python>=0.2.90",
  "torch>=2.3.0"
]
dev = [
  "pytest>=8.2.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.0"
]


[project.urls]
Homepage = "https://github.com/nia-huck/Diaricat"
Repository = "https://github.com/nia-huck/Diaricat"
Issues = "https://github.com/nia-huck/Diaricat/issues"

[project.scripts]
diaricat = "diaricat.main:run"
diaricat-api = "diaricat.main:run_api"

[tool.hatch.build.targets.wheel]
packages = ["src/diaricat"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
